libri, articoli ottobre

--- a/libri.html
+++ b/libri.html
@@ -45,7 +45,9 @@
       <li>Less than Zero</li>
       <li>Un anno sull'Altipiano</li>
       <p><i>Ariosto era un po’ come i nostri giornalisti di guerra, e descrisse cento combattimenti senza averne visto uno solo. Ma che grazia e che gioia nel mondo dei suoi eroi.</i></p>
-      <li>Le città invisibili</li>      
+      <li>Le città invisibili</li>
+      <li>La morte di Ivan Il'ič</li>
+      <li>Libro di sogni</li>              
     </ol>
 
   <h3> 2024 </h3>
